fixed bg shift

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,12 +6,6 @@ select, option {
     background-color: #A8DEEE;
 }
 
-html {
-    background-image: url("/assets/images/grumble-bg.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
 body {
     background-image: url("/assets/images/grumble-bg.jpg");
     background-repeat: no-repeat;
@@ -174,18 +168,10 @@ h3  {
 /* responsive styling for mobile */
 
 @media(max-width:768px) {
-    html {
-
-    height: 100%;
-    background: url("/assets/images/grumble-bg-mobile.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;}
 
     body {
 
-        height: 100%;
+
         background: url("/assets/images/grumble-bg-mobile.jpg") no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
